# drf-api-permissions-postgres

./: .env  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
api/: models.py  permissions.py  urls.py  views.py
api/migrations/: 0001_initial.py
data/db/base/1/: 2619  2704
data/db/base/13066/: 12907  2658  2673  2674  2691
data/db/base/13067/: 1247  1249  1249_vm  1259  1259_vm  16384  16386  16392  16393  16395  16397  16401  16403  16405  16407  16411  16413  16419  16421  16423  16429  16431  16437  16439  16447  16449  16455  16457  16464  16465  16478  16479  16480  16481  16493  16494  16495  16507  16508  16509  (+46 more)
data/db/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
data/db/pg_stat/: db_0.stat  db_13067.stat  global.stat
todo_drf/: settings.py  urls.py
